# PetPal

./: .gitignore  README.md  package-lock.json
ai-pipeline/: README.md  action_library.py  config.py  pipeline.py  prompts.py  requirements.txt
ai-pipeline/providers/: __init__.py  base.py  coze_provider.py  flux_provider.py  midjourney_provider.py  mock_provider.py
ai-pipeline/scripts/: __init__.py  build_spritesheet.py  crop_frames.py  detect_breed.py  generate_gif.py  package_output.py  remove_background.py
backend/: README.md  requirements.txt
backend/app/: main.py
backend/app/api/: routes.py
backend/app/core/: config.py  database.py
backend/app/models/: db_models.py  schemas.py
backend/app/services/: ai_provider.py  animation_generator.py  character_generator.py  desktop_pet_builder.py  package_builder.py  payment_service.py  pet_detector.py  sprite_builder.py  sticker_generator.py
deploy/: Dockerfile.backend  Dockerfile.frontend  README.md  deploy.sh  docker-compose.yml
deploy/nginx/: Dockerfile  nginx.conf
deploy/nginx/conf.d/: default.conf
desktop-pet/: README.md  package.json  vite.config.ts
desktop-pet/builder/: build_pet.py
desktop-pet/src/: index.html  main.ts  styles.css
desktop-pet/src-tauri/: Cargo.toml  tauri.conf.json
desktop-pet/src-tauri/src/: main.rs
desktop-pet/template/: config.json
frontend/: API_INTEGRATION_GUIDE.md  next.config.js  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: ConfirmButtons.tsx  DownloadCard.tsx  Footer.tsx  Header.tsx  (+9 more)
(+10 files in other folders)
