[package]
name = "petpal-desktop"
version = "0.1.0"
description = "PetPal Desktop Pet"
authors = ["PetPal"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [
  "shell-open",
  "window-all",
  "window-create",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
once_cell = "1"
parking_lot = "0.12"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
